# lda-c-gibs

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  amidala.c  amidala.h  corpus.c  corpus.h  dirichlet.c  dirichlet.h  distributions.c  distributions.h  lda.c  lda.h  libamidala.c  main.c  utils.c  utils.h
